test/spec_vectors/simd_store/ok/module_1.wat
(module (memory 1) (func (export "as-block-value") (block (v128.store (i32.const 0) (v128.const i32x4 0 0 0 0)))) (func (export "as-loop-value") (loop (v128.store (i32.const 0) (v128.const i32x4 0 0 0 0)))) (func (export "as-br-value") (block (br 0 (v128.store (i32.const 0) (v128.const i32x4 0 0 0 0))))) (func (export "as-br_if-value") (block (br_if 0 (v128.store (i32.const 0) (v128.const i32x4 0 0 0 0)) (i32.const 1)))) (func (export "as-br_if-value-cond") (block (br_if 0 (i32.const 6) (v128.store (i32.const 0) (v128.const i32x4 0 0 0 0))))) (func (export "as-br_table-value") (block (br_table 0 (v128.store (i32.const 0) (v128.const i32x4 0 0 0 0)) (i32.const 1)))) (func (export "as-return-value") (return (v128.store (i32.const 0) (v128.const i32x4 0 0 0 0)))) (func (export "as-if-then") (if (i32.const 1) (then (v128.store (i32.const 0) (v128.const i32x4 0 0 0 0))))) (func (export "as-if-else") (if (i32.const 0) (then) (else (v128.store (i32.const 0) (v128.const i32x4 0 0 0 0))))))