test/spec_vectors/simd_store/fail/module_7.wat
(module (memory 1) (func (result v128) (v128.store (i32.const 0) (v128.const i32x4 0 0 0 0))))